# TaskManagementApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
controller/: AddTaskCommand.h  CommandManager.h  RemoveTaskCommand.h  TaskController.cpp  TaskController.h  UpdateTaskCommand.h
domain/: Command.h  Specification.h  Task.h
repository/: CSVTaskRepository.cpp  CSVTaskRepository.h  JSONTaskRepository.cpp  JSONTaskRepository.h  TaskRepository.cpp  TaskRepository.h
tests/: test.cpp  test.h
ui/: FilterDialog.cpp  FilterDialog.h  MainWindow.cpp  MainWindow.h
